--- a/app/assets/stylesheets/communication.css
+++ b/app/assets/stylesheets/communication.css
@@ -141,7 +141,7 @@
 }
 
 .hero-space .form-control {
-  background: #5E2B55;
+  background: ##2B2F46;
   color: #e6e6c9;
   border: none;
 }
@@ -223,12 +223,12 @@
 
 .message-box-right .form-control::-webkit-input-placeholder {
   color: #E6E6C9;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif; 
 }
 
 .message-box-right .form-control:-moz-placeholder {
   color: #E6E6C9;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif; 
 }
 
 .questions {
@@ -273,7 +273,7 @@
 
 .form-control::-moz-placeholder {
   color: #A6A691!important;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif; 
 }
 
 .chosen-container-multi .chosen-choices li.search-field input[type="text"] {
@@ -320,7 +320,7 @@ ts {
 }
 
 .default{
-  background-color: #3E1F3E !important;
+  background-color: #3E1F3E !important; 
   color: #E6E6C9!important;
   border: 1px solid #6B506A;
 }
@@ -378,8 +378,4 @@ ts {
 .form-control#subject {
   color: #F9F9EB!important;
 }
-
-.expander-after {
-  display: inline-block;
-}
-/*End communication*/
+/*End Comunicacion*/
