--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -146,21 +146,20 @@
         <div class="col-md-4">
             <ul>
                 <li><a href="https://github.com/ciudadanointeligente/legislative" target="_blank"><i class="fa fa-github-alt"></i> Revisa nuestro código en Github</a></li>
-                <li><a href="//www.ciudadanointeligente.org/servicios/#congreso" target="_blank"><i class="fa fa-heart-o"></i> ¿Quieres tener un sitio como éste para tu congreso?</a></li>
+
             </ul>
         </div>
         <div class="col-md-4">
           <ul>
             <li>
-              Desarrollado por <a href="//www.ciudadanointeligente.org/" target="_blank"><img src="<%= asset_path('assets/logo-ciudadanoi.png') %>" alt="Fundación Ciudadano Inteligente" title="Fundación Ciudadano Inteligente"></a>
+              Desarrollado por   <a href="//www.tedic.org/" target="_blank"><img src="<%= asset_path('assets/TedicLogo.png') %>" alt="TEDIC" title="TEDIC"></a>
             </li>
           </ul>
         </div>
         <div class="col-md-4">
             <ul>
-                <li><a href="tel:+56224192770"><i class="fa fa-phone"></i> +562 2 419 2770</a></li>
-                <li><a href="" class="email-prensa" target="_top"><i class="fa fa-envelope-o"></i> Contacto prensa</a></li>
-                <li><a href="//bit.ly/17qiMkf" target="_blank"><i class="fa fa-map-marker"></i> Holanda 895, Providencia, Santiago, Chile</a></li>
+                <li><a href="//www.ciudadanointeligente.org/" target="_blank"><i class="fa fa-heart-o"></i> Un trabajo en conjunto con Ciudadano Inteligente
+                  <img src="<%= asset_path('assets/logo-ciudadanoi.png') %>" alt="Fundación Ciudadano Inteligente" title="Fundación Ciudadano Inteligente"></a></li>
             </ul>
         </div>
       </div>
@@ -200,8 +199,8 @@
 
     $(document).ready(function(){
       var pref = 'mailto:prensa',
-          suf = 'ciudadanointeligente.org',
-          subject = '?Subject=Prensa%20de%20Congreso%20abierto';
+          suf = 'tedic.org',
+          subject = '?Subject=Prensa%20de%20Parlamento%20abierto';
       $('a.email-prensa').attr('href', pref+'@'+suf+subject);
     })
   </script>
