video section first commit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,6 +112,9 @@
           <li><%= link_to t('layout.bills'), searches_bills_path %><li/>
           <li><%= link_to t('layout.congressmen'), congressmen_path %><li/>
           <li><%= link_to t('layout.communication'), communications_path %><li/>
+	    <!-- point to media  -->    	    
+            <li><a href="media/">Videos</a></li>
+
           <% if ENV['component_studies_showcase'] %>
             <li><%= link_to t('layout.study'), monologue_path %><li/>
           <% end %>
