--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,7 +113,8 @@
           <li><%= link_to t('layout.congressmen'), congressmen_path %><li/>
           <li><%= link_to t('layout.communication'), communications_path %><li/>
 	    <!-- point to media  -->    	    
-            <li><a href="media/">Videos</a></li>
+    	    <li><a href="http://votaciones.parlamentoabierto.org.py">Votaciones</a></l>
+	<li><a href="#">El ABC</a></li>
 
           <% if ENV['component_studies_showcase'] %>
             <!-- li><%= link_to t('layout.study'), monologue_path %><li/ -->
@@ -148,21 +149,21 @@
       <div class="row">
         <div class="col-md-4">
             <ul>
-                <li><a href="https://github.com/ciudadanointeligente/legislative" target="_blank"><i class="fa fa-github-alt"></i> Revisa nuestro código en Github</a></li>
+                <li><a href="https://github.com/TEDICpy" target="_blank"><i class="fa fa-github-alt"></i> Revisa nuestro código en Github</a></li>
 
             </ul>
         </div>
         <div class="col-md-4">
           <ul>
             <li>
-              Desarrollado por   <a href="//www.tedic.org/" target="_blank"><img src="<%= asset_path('assets/TedicLogo.png') %>" alt="TEDIC" title="TEDIC"></a>
+              Es una iniciativa de    <a href="//www.tedic.org/" target="_blank"><img src="<%= asset_path('assets/TEDIC-logo-blanco.png') %>" alt="TEDIC" title="TEDIC"></a>
             </li>
           </ul>
         </div>
         <div class="col-md-4">
             <ul>
-                <li><a href="//www.ciudadanointeligente.org/" target="_blank"><i class="fa fa-heart-o"></i> Un trabajo en conjunto con Ciudadano Inteligente
-                  <img src="<%= asset_path('assets/logo-ciudadanoi.png') %>" alt="Fundación Ciudadano Inteligente" title="Fundación Ciudadano Inteligente"></a></li>
+                <li><a href="//www.ciudadanointeligente.org/" target="_blank"><!--i class="fa fa-heart-o"--></i> Un trabajo en conjunto con Ciudadano Inteligente
+                  <!--img src="<%= asset_path('assets/logo-ciudadanoi.png') %>" alt="Fundación Ciudadano Inteligente" title="Fundación Ciudadano Inteligente"--></a></li>
             </ul>
         </div>
       </div>
