--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,10 +112,10 @@
           <li><%= link_to t('layout.bills'), searches_bills_path %><li/>
           <li><%= link_to t('layout.congressmen'), congressmen_path %><li/>
           <li><%= link_to t('layout.communication'), communications_path %><li/>
-	    <!-- point to media  -->    	    
-    	    <li><a href="http://votaciones.parlamentoabierto.org.py">Votaciones</a></l>
-	<li><a href="#">El ABC</a></li>
-
+	  <!-- point to media  -->    	    
+    	  <li><a href="http://votaciones.parlamentoabierto.org.py">Votaciones</a></l>
+	  <!-- <li><a href="media/">El ABC</a></li> -->
+	  <li><%= link_to t('El ABC'), media_path %></li>
           <% if ENV['component_studies_showcase'] %>
             <!-- li><%= link_to t('layout.study'), monologue_path %><li/ -->
           <% end %>
