--- a/app/views/searches/_box_congressmen_result.html.haml
+++ b/app/views/searches/_box_congressmen_result.html.haml
@@ -2,13 +2,11 @@
   %div.row
     %div.col-md-1
       - if ! congressman.images.blank?
-        - if !congressman.images.blank? and !congressman.images[0]['url'].blank?
-          - fantasy_name = congressmen_pic(congressman.name.gsub(",",""), congressman.images[0]]['url'])
-
-        -# - fantasy_name = congressmen_pic(congressman.name, congressman.images[0].url)
-        -# = image_tag('congressman/'+fantasy_name+'.jpg', class: "img-circle imgg-responsive hidden-xs")
-        -# = 
-        image_tag('congressman/'+fantasy_name+'.jpg', class: "img-thumbnail img-responsive visible-xs")
+        - if !congressman.images.blank? and !congressman.images[0].blank?
+          = puts congressman.images[0]
+          - fantasy_name = congressmen_pic(congressman.name.gsub(",",""), congressman.images[0])
+          = image_tag('congressman/'+fantasy_name+'.jpg', class: "img-circle img-responsive hidden-xs")
+          = image_tag('congressman/'+fantasy_name+'.jpg', class: "img-thumbnail img-responsive visible-xs")
       - else
         = image_tag('default-profile.png', class: "img-circle img-responsive hidden-xs")
         = image_tag('default-profile.png', class: "img-thumbnail img-responsive visible-xs")
