--- a/app/views/mains/index.html.haml
+++ b/app/views/mains/index.html.haml
@@ -1,7 +1,7 @@
 = render :partial => "search"
 = render :partial => "social_network_box"
-- if ENV['component_legislative_hot_bills']
-  = render :partial => "hot"
+/- if ENV['component_legislative_hot_bills'] ???
+= render :partial => "hot"
 
 %div.container
   %div.row
