--- a/app/views/congressmen/_filter_search_form.html.haml
+++ b/app/views/congressmen/_filter_search_form.html.haml
@@ -2,18 +2,23 @@
   - if !@congressmen.blank? and !@congressmen.persons.blank?
     %div.form-group
       = label_tag :name, t('congressmen.form_name')
-      = select_tag "name", options_from_collection_for_select(@congressmen.persons, "name", "name", params[:name]), prompt: t('congressmen.placeholder_name'), class: 'form-control chosen'
+      = select_tag "congressman", options_from_collection_for_select(@congressmen.persons,
+      "id", "name", params[:congressman]), prompt: t('congressmen.placeholder_name'),
+      class: 'form-control chosen'
+
+  -# %div.form-group
+  -#   = label_tag :zone, t('congressmen.form_zone')
+  -#   = text_field_tag :zone, params[:zone], :class => 'form-control', :placeholder => t('congressmen.placeholder_zone'), :onfocus => "ga('send','congressmen_filters','focus_zone')"
 
   %div.form-group
-    = label_tag :zone, t('congressmen.form_zone')
-    = text_field_tag :zone, params[:zone], :class => 'form-control', :placeholder => t('congressmen.placeholder_zone'), :onfocus => "ga('send','congressmen_filters','focus_zone')"
-
-  %div.form-group
-    = label_tag :chamber, t('congressmen.form_chamber')
-    %select{:name => "chamber", :class => "form-control", :onfocus => "ga('send','congressmen_filters','focus_chamber')"}
-      %option{:value => "", selected: params[:chamber] == ""}= 'Todas las cámaras'
-      %option{:value => "Diputado", selected: params[:chamber] == "Diputado"}= 'Cámara de diputados'
-      %option{:value => "Senador", selected: params[:chamber] == "Senador"}= 'Senado'
+    = label_tag :chambers, t('congressmen.form_chamber')
+    = select_tag "chambers", options_from_collection_for_select(@chambers,
+    "id", "name", params[:chambers]),
+    prompt: t('Todas las cámaras'), class: 'form-control'
+  -# %select{:name => "chamber", :class => "form-control", :onfocus => "ga('send','congressmen_filters','focus_chamber')"}
+  -#   %option{:value => "", selected: params[:chamber] == ""}= 'Todas las cámaras'
+  -#   %option{:value => "Diputado", selected: params[:chamber] == "Diputado"}= 'Cámara de diputados'
+  -#   %option{:value => "Senador", selected: params[:chamber] == "Senador"}= 'Senado'
 
   %div.form-group
     = label_tag :organizations, t('congressmen.form_party')
