--- a/app/views/searches/_box_bills_result.html.haml
+++ b/app/views/searches/_box_bills_result.html.haml
@@ -23,7 +23,7 @@
           %span.light 
             = t('search.initiative')
           = bill.source
-      %p
-        = link_to new_user_subscription_path(:bill => bill.uid),{title: t('bill.subscribe')} do
-          %i.fa.fa-star-o
-          = t('bill.subscribe')
+      -# %p
+      -#   = link_to new_user_subscription_path(:bill => bill.uid),{title: t('bill.subscribe')} do
+      -#     %i.fa.fa-star-o
+      -#     = t('bill.subscribe')
