--- a/app/views/bills/_bill.html.haml
+++ b/app/views/bills/_bill.html.haml
@@ -7,10 +7,10 @@
   %div.col-md-11
     %h5
       = link_to bill.title, bill_path(bill.uid), :onclick => "ga('send','paperwork','bill', '"+bill.uid+"')"
-    %p
-      = link_to (new_user_subscription_path(:bill => bill.uid)) do
-        %i.fa.fa-star-o{title: t('bill.subscribe')}
-        = t('bill.subscribe')
+    -# %p
+    -#   = link_to (new_user_subscription_path(:bill => bill.uid)) do
+    -#     %i.fa.fa-star-o{title: t('bill.subscribe')}
+    -#     = t('bill.subscribe')
     %p
       - if ! bill.stage.blank?
         %span.light
