--- a/app/views/congressmen/_box_congressmen_result.html.haml
+++ b/app/views/congressmen/_box_congressmen_result.html.haml
@@ -3,7 +3,7 @@
     %div.row.result
       %div.col-md-1
         - if !congressman.images.blank? and !congressman.images[0].blank?
-          - fantasy_name = congressmen_pic(congressman.name.gsub(",",""), congressman.images[0])
+          - fantasy_name = congressmen_pic(congressman.name.gsub(",",""), congressman.images[0].url)
           = image_tag('congressman/'+fantasy_name+'.jpg', class: "img-circle img-responsive hidden-xs")
           = image_tag('congressman/'+fantasy_name+'.jpg', class: "img-thumbnail img-responsive visible-xs")
         - else
