--- a/app/views/congressmen/show.html.haml
+++ b/app/views/congressmen/show.html.haml
@@ -109,6 +109,19 @@
               -# @organizations.each do | o |
                 /= link_to o.name, {:controller => 'congressmen', :action => 'searches', :organizations => o.id} if @congressman.memberships[0].organization_id == o.id
 
+        - if ! @congressman.contact_details.blank?
+          %b
+            =t('Contactos')
+          %p 
+            - @congressman.contact_details.each do | c |
+              %span.light
+                - if c.type == 'email'
+                  = c.label + ":"
+                  = mail_to c.value, c.value
+                - else
+                  = c.label + ": " + c.value
+
+  
         - if ! @congressman.commissions.blank?
           %b
             =t('Comisiones')
@@ -116,23 +129,6 @@
             - @congressman.commissions.each do | c |
               %span.light
                 = c.name
-              -# - if ! c.permanent.blank?
-              -#   %p
-              -#     %span.light
-              -#       = t('congressmen.permanent')
-              -#     = c.permanent
-
-              -# - if ! c.special.blank?
-              -#   %p
-              -#     %span.light
-              -#       = t('congressmen.special')
-              -#     = c.special
-
-              -# - if ! c.researcher.blank?
-              -#   %p
-              -#     %span.light
-              -#       = t('congressmen.research')
-              -#     = c.researcher
 
         - if ! @congressman.links.blank?
           %div
