--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,7 +104,7 @@
         </button>
         <div id='site-logo'>
           <a href="<%=root_path%>"><%= image_tag "logo-parlamentoabierto.png", alt:t('layout.title_project') %></a>
-          <div id="defci"><%= t('layout.from') %> <!-- span id="beta">BETA</span --></div>
+          <div id="defci"><!--%= t('layout.from') %> <!-- span id="beta">BETA</span --></div>
         </div>
       </div>
       <div class="collapse navbar-collapse">
