--- a/app/views/mains/_latest_messages.html.haml
+++ b/app/views/mains/_latest_messages.html.haml
@@ -8,10 +8,11 @@
         %div.home-answers
           %div.col-md-2
             - congressman = congressmen_profile(answer.person.name)
+            - puts congressman
             - if !congressman['image'].blank?
               - fantasy_name = congressmen_pic(answer.person.name, congressman['image'])
-              = image_tag(fantasy_name+'.jpg', class: "img-circle img-responsive hidden-xs")
-              = image_tag(fantasy_name+'.jpg', class: "img-thumbnail img-responsive visible-xs")
+              = image_tag('app/assets/images/congressman/'+fantasy_name+'.jpg', class: "img-circle img-responsive hidden-xs")
+              = image_tag('app/assets/images/congressman/'+fantasy_name+'.jpg', class: "img-thumbnail img-responsive visible-xs")
             - else
               = image_tag('default-profile.png', class: "img-circle img-responsive hidden-xs")
               = image_tag('default-profile.png', class: "img-thumbnail img-responsive visible-xs")
