--- a/app/views/mains/_latest_messages.html.haml
+++ b/app/views/mains/_latest_messages.html.haml
@@ -8,11 +8,7 @@
         %div.home-answers
           %div.col-md-2
             - congressman = congressmen_profile(answer.person.name)
-            -#if !congressman['image'].blank?
-            - puts '#####'
-            - puts answer.person.id
-            - puts '#####'
-            - if !File.exist?('app/assets/images/congressman/'+answer.person.id+'.jpg')  
+            - if !congressman['image'].blank?
               -# fantasy_name = congressmen_pic(answer.person.name, congressman['image'])
               - id = congressmen_pic_by_id(answer.person.id, congressman['image'])
               = image_tag('app/assets/images/congressman/'+answer.person.id+'.jpg', class: "img-circle img-responsive hidden-xs")
