--- a/app/views/congressmen/searches.html.haml
+++ b/app/views/congressmen/searches.html.haml
@@ -19,6 +19,9 @@
             %a.btn-warning.btn-xs{'href'=>'#', 'onclick'=>'window.open("'+url+'","twitter","width=450, height=250")'}
               %i.fa.fa-twitter 
               = t("congressmen.tw_share")
+        %li
+          %a{:href => "javascript:;", :onclick => "window.open('http://sharetodiaspora.github.io/?url='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title),'das','location=no,links=no,scrollbars=no,toolbar=no,width=620,height=550'); return false;", :rel => "nofollow", :target => "_blank"}
+            %img{:src => "http://sharetodiaspora.github.io/favicon.png", :style => "border: 0px solid;"}
 
   %div.row
     %h2
