--- a/app/views/mains/_social_network_box.html.haml
+++ b/app/views/mains/_social_network_box.html.haml
@@ -13,3 +13,6 @@
         %span.fa-stack.fa-lg
           %i.fa.fa-circle.fa-stack-2x
           %i.fa.fa-facebook.fa-stack-1x.fa-inverse
+    %li
+      %a{:href => "javascript:;", :onclick => "window.open('http://sharetodiaspora.github.io/?url='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title),'das','location=no,links=no,scrollbars=no,toolbar=no,width=620,height=550'); return false;", :rel => "nofollow", :target => "_blank"}
+        %img{:src => "http://sharetodiaspora.github.io/favicon.png", :style => "border: 0px solid;"}
