--- a/app/views/layouts/monologue/application.html.erb
+++ b/app/views/layouts/monologue/application.html.erb
@@ -12,8 +12,8 @@
     <title><%= @title %><%= Legislative::Application.config.application_name %></title>
     <meta name="description" content="<%= ENV['description'] %>">
     <meta name="keywords" content="<%= ENV['keywords'] %>">
-
-    <meta name="og:image" content="<%= asset_path('assets/congreso-abierto-og-fb-404.png') %>">
+    <!-- congreso-abierto-og-fb-404 -->
+    <meta name="og:image" content="<%= asset_path('assets/logo-parlamentoabierto.png') %>">
     <meta name="og:title" content="<%= @title %><%= Legislative::Application.config.application_name %>">
     <meta name="og:description" content="<%= ENV['og_description'] %>">
 
