--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,9 @@
     <!-- meta for windows -->
     <meta name="application-name" content="<%= Legislative::Application.config.application_name %>"/>
     <meta name="msapplication-TileColor" content="#3e1f3e"/>
-    <meta name="msapplication-square70x70logo" content="<%= asset_path('tiny.png') %>"/>
+    <meta name="msapplication-square70x70logo" content="<%= asset_path('tiny_tedic.png') %>"/>
     <meta name="msapplication-square150x150logo" content="<%= asset_path('square.png') %>"/>
-    <meta name="msapplication-wide310x150logo" content="<%= asset_path('wide.png') %>"/>
+    <meta name="msapplication-wide310x150logo" content="<%= asset_path('wide_tedic.png') %>"/>
     <meta name="msapplication-square310x310logo" content="<%= asset_path('large.png') %>"/>
     <!-- end meta for windows -->
 
